[project]
name = "c2a-tlm-cmd-code-generator"
version = "1.8.0"
description = "TLmCmd DB から C2A のコードを生成するためのスクリプト"
readme = "README.md"
license = "MIT"

requires-python = ">= 3.7"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.3.0",
    "flake8>=5.0.4",
]

[tool.rye.scripts]
generate = "python GenerateC2ACode.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
target-version = ['py38']
line-length = 100
include = '\.pyi?$'

# TODO: .flake8 を消してこちらに移植する
# [tool.flake8]
# max-line-length = 100
